more jumpscare stuff
i did this earlier today but forgot to commit lol

--- a/Makefile.tim
+++ b/Makefile.tim
@@ -154,7 +154,7 @@ iso/officeg/back.arc: iso/officeg/back0.tim iso/officeg/back1.tim iso/officeg/ba
 
 # OfficeB
 iso/officeb/back.arc: iso/officeb/back0.tim iso/officeb/back1.tim
-iso/officeb/js.arc: iso/officeb/jsb.tim iso/officeb/jsf0.tim iso/officeb/jsf1.tim iso/officeb/jsf2.tim iso/officeb/jsf3.tim iso/officeb/jsf4.tim iso/officeb/jsf5.tim iso/officeb/jsf6.tim iso/officeb/jsf7.tim iso/officeb/jsf8.tim iso/officeb/jsf9.tim iso/officeb/jsf10.tim iso/officeb/jsf11.tim iso/officeb/jsf12.tim iso/officeb/jsf13.tim iso/officeb/jsf14.tim
+iso/officeb/js.arc: iso/officeb/jsb.tim iso/officeb/jsf0.tim iso/officeb/jsf1.tim iso/officeb/jsf2.tim iso/officeb/jsf3.tim iso/officeb/jsf4.tim iso/officeb/jsf5.tim iso/officeb/jsf6.tim iso/officeb/jsf7.tim iso/officeb/jsf8.tim iso/officeb/jsf9.tim iso/officeb/jsf10.tim iso/officeb/jsf11.tim iso/officeb/jsf12.tim iso/officeb/jsf13.tim iso/officeb/jsf14.tim iso/officeb/jsg.tim iso/officeb/jsfx0.tim iso/officeb/jsfx1.tim iso/officeb/jsfx2.tim iso/officeb/jsfx3.tim iso/officeb/jsfx4.tim iso/officeb/jsfx5.tim iso/officeb/jsfx6.tim iso/officeb/jsfx7.tim iso/officeb/jsfx8.tim iso/officeb/jsfx9.tim iso/officeb/jsfx10.tim iso/officeb/jsfx11.tim iso/officeb/jsfx12.tim iso/officeb/jsfx13.tim iso/officeb/jsfx14.tim iso/officeb/jsfx15.tim iso/officeb/jsfx16.tim iso/officeb/jsfx17.tim
 
 # FNAF 3
 iso/fnaf3/back.arc: iso/fnaf3/back0.tim
