--- a/Makefile.tim
+++ b/Makefile.tim
@@ -39,6 +39,7 @@ all: \
 	iso/mark/main.arc \
 	iso/mark/dead.tim \
 	iso/freddy/main.arc \
+	iso/gfreddy/main.arc \
 	iso/salvage/main.arc \
 	iso/plush/main.arc \
 	iso/abdul/main.arc \
@@ -117,6 +118,9 @@ iso/mark/main.arc: iso/mark/idle.tim iso/mark/left.tim iso/mark/leftm.tim iso/ma
 
 # Freddy
 iso/freddy/main.arc: iso/freddy/idle0.tim iso/freddy/idle1.tim iso/freddy/left0.tim iso/freddy/left1.tim iso/freddy/down0.tim iso/freddy/down1.tim iso/freddy/up0.tim iso/freddy/up1.tim iso/freddy/right0.tim iso/freddy/right1.tim
+
+# GFreddy
+iso/gfreddy/main.arc: iso/gfreddy/idle.tim iso/gfreddy/left0.tim iso/gfreddy/left1.tim iso/gfreddy/down0.tim iso/gfreddy/down1.tim iso/gfreddy/up0.tim iso/gfreddy/up1.tim iso/gfreddy/right0.tim iso/gfreddy/right1.tim
 
 # Salvage
 iso/salvage/main.arc: iso/salvage/idle0.tim iso/salvage/idle1.tim iso/salvage/idle2.tim iso/salvage/left0.tim iso/salvage/left1.tim iso/salvage/left2.tim iso/salvage/down0.tim iso/salvage/down1.tim iso/salvage/down2.tim iso/salvage/up0.tim iso/salvage/up1.tim iso/salvage/up2.tim iso/salvage/right0.tim iso/salvage/right1.tim iso/salvage/right2.tim
