--- a/Makefile.tim
+++ b/Makefile.tim
@@ -28,14 +28,15 @@ all: \
 	iso/prange/main.arc \
 	iso/henry/main.arc \
 	iso/henrytv/main.arc \
-	iso/henryp/main.arc \
 	iso/bfp/main.arc \
+	iso/henryp/main.arc \
 	iso/sunny/main.arc \
 	iso/matpat/main.arc \
 	iso/lphone/main.arc \
 	iso/fatjones/main.arc \
 	iso/gphone/main.arc \
 	iso/goldenf/main.arc \
+	iso/springb/main.arc \
 	iso/mark/main.arc \
 	iso/mark/dead.tim \
 	iso/freddy/main.arc \
@@ -113,6 +114,9 @@ iso/gphone/main.arc: iso/gphone/gphone0.tim iso/gphone/gphone1.tim iso/gphone/gp
 
 # GoldenF
 iso/goldenf/main.arc: iso/goldenf/goldenf0.tim iso/goldenf/goldenf1.tim
+
+# SpringB
+iso/springb/main.arc: iso/springb/idle0.tim iso/springb/idle1.tim iso/springb/idle2.tim iso/springb/idle3.tim iso/springb/left.tim iso/springb/down.tim iso/springb/up.tim iso/springb/right.tim
 
 # Mark
 iso/mark/main.arc: iso/mark/idle.tim iso/mark/left.tim iso/mark/leftm.tim iso/mark/down.tim iso/mark/downm.tim iso/mark/up.tim iso/mark/upm.tim iso/mark/right.tim iso/mark/rightm.tim
