--- a/Makefile.tim
+++ b/Makefile.tim
@@ -45,6 +45,7 @@ all: \
 	iso/gfreddy/main.arc \
 	iso/foxy/main.arc \
 	iso/salvage/main.arc \
+	iso/omc/main.arc \
 	iso/plush/main.arc \
 	iso/abdul/main.arc \
 	iso/criminal/main.arc \
@@ -138,6 +139,9 @@ iso/foxy/main.arc: iso/foxy/idle0.tim iso/foxy/idle1.tim iso/foxy/idle2.tim iso/
 
 # Salvage
 iso/salvage/main.arc: iso/salvage/idle0.tim iso/salvage/idle1.tim iso/salvage/idle2.tim iso/salvage/left0.tim iso/salvage/left1.tim iso/salvage/left2.tim iso/salvage/down0.tim iso/salvage/down1.tim iso/salvage/down2.tim iso/salvage/up0.tim iso/salvage/up1.tim iso/salvage/up2.tim iso/salvage/right0.tim iso/salvage/right1.tim iso/salvage/right2.tim
+
+# OMC
+iso/omc/main.arc: iso/omc/idle0.tim iso/omc/idle1.tim iso/omc/left.tim iso/omc/down.tim iso/omc/up.tim iso/omc/right.tim
 
 # Plush
 iso/plush/main.arc: iso/plush/plush.tim
