followed almost done
watch this im gonna make igor do the fading for me it's gonna be so funny

--- a/Makefile.tim
+++ b/Makefile.tim
@@ -70,6 +70,7 @@ all: \
 	iso/flipside/back.arc \
 	iso/black2/eye.arc \
 	iso/black2/memorys.arc \
+	iso/black2/alert.tim
 
 iso/%.tim: iso/%.png
 	tools/funkintimconv/funkintimconv $@ $<
