more stuff for man

--- a/Makefile.tim
+++ b/Makefile.tim
@@ -15,6 +15,7 @@ all: \
 	iso/stage/scanline.tim \
 	iso/stage/flashb.tim \
 	iso/stage/count.tim \
+	iso/stage/border.tim \
 	iso/bf/main.arc \
 	iso/bf/bfo.arc \
 	iso/bf/dead.tim \
