--- a/Makefile.tim
+++ b/Makefile.tim
@@ -58,6 +58,7 @@ all: \
 	iso/jackass/dead.tim \
 	iso/ngt/main.arc \
 	iso/gino/main.arc \
+	iso/strap/main.arc \
 	iso/criminal/main.arc \
 	iso/dad/main.arc \
 	iso/storage/back.arc \
@@ -184,6 +185,9 @@ iso/ngt/main.arc: iso/ngt/idle0.tim iso/ngt/idle1.tim iso/ngt/idle2.tim iso/ngt/
 
 # Gino
 iso/gino/main.arc: iso/gino/idle0.tim iso/gino/idle1.tim iso/gino/idle2.tim iso/gino/idle3.tim iso/gino/idle4.tim iso/gino/idle5.tim iso/gino/left0.tim iso/gino/left1.tim iso/gino/left2.tim iso/gino/left3.tim iso/gino/left4.tim iso/gino/left5.tim iso/gino/left6.tim iso/gino/left7.tim iso/gino/left8.tim iso/gino/left9.tim iso/gino/left10.tim iso/gino/left11.tim iso/gino/down0.tim iso/gino/down1.tim iso/gino/down2.tim iso/gino/down3.tim iso/gino/down4.tim iso/gino/down5.tim iso/gino/down6.tim iso/gino/down7.tim iso/gino/down8.tim iso/gino/down9.tim iso/gino/down10.tim iso/gino/down11.tim iso/gino/down12.tim iso/gino/down13.tim iso/gino/down14.tim iso/gino/up0.tim iso/gino/up1.tim iso/gino/up2.tim iso/gino/up3.tim iso/gino/up4.tim iso/gino/up5.tim iso/gino/up6.tim iso/gino/up7.tim iso/gino/up8.tim iso/gino/up9.tim iso/gino/up10.tim iso/gino/up11.tim iso/gino/up12.tim iso/gino/up13.tim iso/gino/right0.tim iso/gino/right1.tim iso/gino/right2.tim iso/gino/right3.tim iso/gino/right4.tim iso/gino/right5.tim iso/gino/right6.tim iso/gino/right7.tim iso/gino/right8.tim iso/gino/bite0.tim iso/gino/bite1.tim iso/gino/bite2.tim iso/gino/bite3.tim iso/gino/bite4.tim iso/gino/bite5.tim iso/gino/bite6.tim iso/gino/bite7.tim iso/gino/bite8.tim iso/gino/bite9.tim iso/gino/bite10.tim iso/gino/bite11.tim iso/gino/bite12.tim iso/gino/bite13.tim iso/gino/bite14.tim iso/gino/bite15.tim iso/gino/bite16.tim iso/gino/bite17.tim iso/gino/bite18.tim iso/gino/bite19.tim iso/gino/bite20.tim iso/gino/bite21.tim iso/gino/bite22.tim
+
+# Springtrap
+iso/strap/main.arc: iso/strap/idle.tim iso/strap/left.tim iso/strap/down.tim iso/strap/up.tim iso/strap/right.tim
 
 # Criminal
 iso/criminal/main.arc: iso/criminal/intro.tim iso/criminal/idle.tim iso/criminal/left0.tim iso/criminal/left1.tim iso/criminal/down0.tim iso/criminal/down1.tim iso/criminal/up0.tim iso/criminal/up1.tim iso/criminal/right0.tim iso/criminal/right1.tim
