some intro stuff

--- a/Makefile.tim
+++ b/Makefile.tim
@@ -93,7 +93,7 @@ iso/%.arc:
 	tools/funkinarcpak/funkinarcpak $@ $^
 
 # Menu
-iso/menu/menu.arc: iso/menu/back.tim iso/menu/story.tim iso/menu/title.tim iso/menu/ourple.tim iso/menu/checkers.tim iso/menu/menustuf.tim
+iso/menu/menu.arc: iso/menu/back.tim iso/menu/story.tim iso/menu/title.tim iso/menu/ourple.tim iso/menu/checkers.tim iso/menu/menustuf.tim iso/menu/freeplay.tim
 
 # BF
 iso/bf/main.arc: iso/bf/bf0.tim iso/bf/bf1.tim iso/bf/bf2.tim iso/bf/bf3.tim iso/bf/bf4.tim iso/bf/bf5.tim iso/bf/bf6.tim
