--- a/Makefile.tim
+++ b/Makefile.tim
@@ -61,6 +61,7 @@ all: \
 	iso/strap/main.arc \
 	iso/mangle/main.arc \
 	iso/criminal/main.arc \
+	iso/henrym/main.arc \
 	iso/dad/main.arc \
 	iso/storage/back.arc \
 	iso/jrs/back.arc \
@@ -196,6 +197,9 @@ iso/mangle/main.arc: iso/mangle/idle.tim iso/mangle/left.tim iso/mangle/down.tim
 
 # Criminal
 iso/criminal/main.arc: iso/criminal/intro.tim iso/criminal/idle.tim iso/criminal/left0.tim iso/criminal/left1.tim iso/criminal/down0.tim iso/criminal/down1.tim iso/criminal/up0.tim iso/criminal/up1.tim iso/criminal/right0.tim iso/criminal/right1.tim
+
+# HenryM
+iso/henrym/main.arc: iso/henrym/henry0.tim iso/henrym/henry1.tim iso/henrym/henry2.tim iso/henrym/henry3.tim iso/henrym/henry4.tim iso/henrym/henry5.tim
 
 # Dad
 iso/dad/main.arc: iso/dad/idle0.tim iso/dad/idle1.tim iso/dad/left.tim iso/dad/down.tim iso/dad/up.tim iso/dad/right.tim
