--- a/Makefile.tim
+++ b/Makefile.tim
@@ -64,6 +64,7 @@ all: \
 	iso/criminal/dead.tim \
 	iso/jack/main.arc \
 	iso/jack/dead.tim \
+	iso/dave/main.arc \
 	iso/henrym/main.arc \
 	iso/dad/main.arc \
 	iso/storage/back.arc \
@@ -203,6 +204,9 @@ iso/criminal/main.arc: iso/criminal/intro.tim iso/criminal/idle.tim iso/criminal
 
 # Jack
 iso/jack/main.arc: iso/jack/jack0.tim iso/jack/jack1.tim iso/jack/jack2.tim
+
+# Dave
+iso/dave/main.arc: iso/dave/dave0.tim iso/dave/dave1.tim iso/dave/dave2.tim iso/dave/dave3.tim
 
 # HenryM
 iso/henrym/main.arc: iso/henrym/henry0.tim iso/henrym/henry1.tim iso/henrym/henry2.tim iso/henrym/henry3.tim iso/henrym/henry4.tim iso/henrym/henry5.tim
