--- a/Makefile.tim
+++ b/Makefile.tim
@@ -65,6 +65,9 @@ all: \
 	iso/jack/main.arc \
 	iso/jack/dead.tim \
 	iso/dave/main.arc \
+	iso/dee/main.arc \
+	iso/steven/main.arc \
+	iso/peter/main.arc \
 	iso/henrym/main.arc \
 	iso/dad/main.arc \
 	iso/storage/back.arc \
@@ -207,6 +210,15 @@ iso/jack/main.arc: iso/jack/jack0.tim iso/jack/jack1.tim iso/jack/jack2.tim
 
 # Dave
 iso/dave/main.arc: iso/dave/dave0.tim iso/dave/dave1.tim iso/dave/dave2.tim iso/dave/dave3.tim
+
+# Dee
+iso/dee/main.arc: iso/dee/dee0.tim iso/dee/dee1.tim iso/dee/dee2.tim iso/dee/dee3.tim
+
+# Steven
+iso/steven/main.arc: iso/steven/steven0.tim iso/steven/steven1.tim iso/steven/steven2.tim iso/steven/steven3.tim
+
+# Peter
+iso/peter/main.arc: iso/peter/peter0.tim iso/peter/peter1.tim iso/peter/peter2.tim iso/peter/peter3.tim
 
 # HenryM
 iso/henrym/main.arc: iso/henrym/henry0.tim iso/henrym/henry1.tim iso/henrym/henry2.tim iso/henrym/henry3.tim iso/henrym/henry4.tim iso/henrym/henry5.tim
