--- a/Makefile.tim
+++ b/Makefile.tim
@@ -94,6 +94,7 @@ all: \
 	iso/black2/alert.tim \
 	iso/samroom/back.arc \
 	iso/miller/back.arc \
+	iso/miller/doggo.arc \
 
 iso/%.tim: iso/%.png
 	tools/funkintimconv/funkintimconv $@ $<
@@ -279,3 +280,4 @@ iso/samroom/back.arc: iso/samroom/back0.tim iso/samroom/back1.tim
 
 # Miller
 iso/miller/back.arc: iso/miller/back.tim
+iso/miller/doggo.arc: iso/miller/doggo.tim
