--- a/Makefile.tim
+++ b/Makefile.tim
@@ -95,6 +95,7 @@ all: \
 	iso/samroom/back.arc \
 	iso/miller/back.arc \
 	iso/miller/doggo.arc \
+	iso/miller/fback.arc \
 
 iso/%.tim: iso/%.png
 	tools/funkintimconv/funkintimconv $@ $<
@@ -281,3 +282,4 @@ iso/samroom/back.arc: iso/samroom/back0.tim iso/samroom/back1.tim
 # Miller
 iso/miller/back.arc: iso/miller/back.tim
 iso/miller/doggo.arc: iso/miller/doggo.tim
+iso/miller/fback.arc: iso/miller/fback0.tim iso/miller/fback1.tim iso/miller/fback2.tim iso/miller/hint.tim
