--- a/Makefile.tim
+++ b/Makefile.tim
@@ -17,6 +17,7 @@ all: \
 	iso/stage/count.tim \
 	iso/stage/border.tim \
 	iso/miller/spite.tim \
+	iso/miller/ty1.tim \
 	iso/bf/main.arc \
 	iso/bf/bfo.arc \
 	iso/bf/dead.tim \
@@ -283,4 +284,4 @@ iso/samroom/back.arc: iso/samroom/back0.tim iso/samroom/back1.tim
 # Miller
 iso/miller/back.arc: iso/miller/back.tim iso/miller/spite.tim
 iso/miller/doggo.arc: iso/miller/doggo.tim
-iso/miller/fback.arc: iso/miller/fback0.tim iso/miller/fback1.tim iso/miller/fback2.tim iso/miller/hint.tim
+iso/miller/fback.arc: iso/miller/fback0.tim iso/miller/fback1.tim iso/miller/fback2.tim iso/miller/hint.tim iso/miller/open0.tim iso/miller/open1.tim iso/miller/open2.tim iso/miller/open3.tim iso/miller/open4.tim iso/miller/open5.tim iso/miller/open6.tim iso/miller/ty0.tim
